// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types with schemas 1`] = `
[
  "35:2",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 2`] = `
[
  "36:2",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 3`] = `
[
  "37:39",
  "Property 'c2' does not exist on type 'Row<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", false>'.",
]
`;

exports[`Types with schemas 4`] = `
[
  "38:31",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 5`] = `
[
  "39:31",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 6`] = `
[
  "42:42",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 7`] = `
[
  "45:28",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 8`] = `
[
  "51:2",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 9`] = `
[
  "52:2",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 10`] = `
[
  "53:28",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 11`] = `
[
  "56:29",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 12`] = `
[
  "59:41",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d" | undefined'.",
]
`;

exports[`Types with schemas 13`] = `
[
  "60:35",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 14`] = `
[
  "63:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 15`] = `
[
  "69:2",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 16`] = `
[
  "70:2",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 17`] = `
[
  "71:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 18`] = `
[
  "74:51",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 19`] = `
[
  "75:30",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 20`] = `
[
  "78:39",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 21`] = `
[
  "79:27",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 22`] = `
[
  "84:2",
  "Conversion of type 'CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1">' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 23`] = `
[
  "85:39",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 24`] = `
[
  "86:27",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 25`] = `
[
  "92:2",
  "Conversion of type 'number | undefined' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 26`] = `
[
  "93:2",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 27`] = `
[
  "94:31",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 28`] = `
[
  "97:42",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 29`] = `
[
  "100:28",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 30`] = `
[
  "105:2",
  "Conversion of type 'DefaultedValueFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 31`] = `
[
  "106:2",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 32`] = `
[
  "107:28",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 33`] = `
[
  "113:40",
  "Type '{ c2: number; }' is not assignable to type 'Row<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 34`] = `
[
  "114:40",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 35`] = `
[
  "115:30",
  "Argument of type '{ t2: { r2: { c2: number; }; }; }' is not assignable to parameter of type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, true>'.",
]
`;

exports[`Types with schemas 36`] = `
[
  "118:40",
  "Type '{ c2: number; }' is not assignable to type 'Row<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 37`] = `
[
  "119:40",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 38`] = `
[
  "120:28",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 39`] = `
[
  "123:28",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 40`] = `
[
  "126:39",
  "Argument of type '{ c2: number; }' is not assignable to parameter of type 'Row<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 41`] = `
[
  "127:39",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 42`] = `
[
  "128:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 43`] = `
[
  "131:33",
  "Argument of type '{ c2: number; }' is not assignable to parameter of type 'Row<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 44`] = `
[
  "132:33",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 45`] = `
[
  "133:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 46`] = `
[
  "136:46",
  "Argument of type '{ c2: number; }' is not assignable to parameter of type 'Row<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", true>'.",
]
`;

exports[`Types with schemas 47`] = `
[
  "137:46",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 48`] = `
[
  "138:33",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 49`] = `
[
  "141:26",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 50`] = `
[
  "145:39",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 51`] = `
[
  "146:45",
  "Argument of type 'string' is not assignable to parameter of type 'number | MapCell<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1">'.",
]
`;

exports[`Types with schemas 52`] = `
[
  "147:45",
  "Argument of type '() => "a"' is not assignable to parameter of type 'number | MapCell<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1">'.",
]
`;

exports[`Types with schemas 53`] = `
[
  "148:27",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 54`] = `
[
  "151:39",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d"'.",
]
`;

exports[`Types with schemas 55`] = `
[
  "152:27",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 56`] = `
[
  "155:30",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 57`] = `
[
  "156:30",
  "Argument of type '{ v2: number; }' is not assignable to parameter of type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, true>'.",
]
`;

exports[`Types with schemas 58`] = `
[
  "159:37",
  "Type 'string' is not assignable to type 'number'.",
]
`;

exports[`Types with schemas 59`] = `
[
  "160:37",
  "Argument of type '{ v2: number; }' is not assignable to parameter of type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, true>'.",
]
`;

exports[`Types with schemas 60`] = `
[
  "164:34",
  "Argument of type 'string' is not assignable to parameter of type 'number | MapValue<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">'.",
]
`;

exports[`Types with schemas 61`] = `
[
  "165:34",
  "Argument of type '() => "a"' is not assignable to parameter of type 'number | MapValue<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">'.",
]
`;

exports[`Types with schemas 62`] = `
[
  "166:28",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 63`] = `
[
  "169:28",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d"'.",
]
`;

exports[`Types with schemas 64`] = `
[
  "176:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 65`] = `
[
  "183:12",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 66`] = `
[
  "184:12",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 67`] = `
[
  "188:12",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 68`] = `
[
  "189:12",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 69`] = `
[
  "191:10",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 70`] = `
[
  "196:10",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 71`] = `
[
  "208:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 72`] = `
[
  "217:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 73`] = `
[
  "218:8",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 74`] = `
[
  "222:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 75`] = `
[
  "223:8",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 76`] = `
[
  "225:6",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 77`] = `
[
  "230:6",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 78`] = `
[
  "239:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 79`] = `
[
  "240:8",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 80`] = `
[
  "242:6",
  "This comparison appears to be unintentional because the types '"c0"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 81`] = `
[
  "246:6",
  "This comparison appears to be unintentional because the types '"c0"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 82`] = `
[
  "254:30",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 83`] = `
[
  "259:6",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 84`] = `
[
  "260:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 85`] = `
[
  "264:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 86`] = `
[
  "265:6",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 87`] = `
[
  "267:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 88`] = `
[
  "272:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 89`] = `
[
  "277:6",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 90`] = `
[
  "278:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 91`] = `
[
  "280:4",
  "This comparison appears to be unintentional because the types '"c0"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 92`] = `
[
  "285:4",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 93`] = `
[
  "288:31",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 94`] = `
[
  "293:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 95`] = `
[
  "294:6",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 96`] = `
[
  "298:6",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 97`] = `
[
  "299:6",
  "Conversion of type 'string' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 98`] = `
[
  "301:4",
  "This comparison appears to be unintentional because the types '"v1" | "v1d"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 99`] = `
[
  "305:4",
  "This comparison appears to be unintentional because the types '"v1" | "v1d"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 100`] = `
[
  "311:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 101`] = `
[
  "312:6",
  "Conversion of type 'number' to type 'undefined' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 102`] = `
[
  "314:4",
  "This comparison appears to be unintentional because the types '"v1"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 103`] = `
[
  "318:4",
  "This comparison appears to be unintentional because the types '"v1"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 104`] = `
[
  "331:6",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1">, CellOrUndefined<...>] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 105`] = `
[
  "332:6",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1d">, CellOrUndefined<...>] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 106`] = `
[
  "338:6",
  "Conversion of type '[string, string] | undefined' to type '[string, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 107`] = `
[
  "339:6",
  "Conversion of type '[string, string] | undefined' to type '[undefined, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 108`] = `
[
  "340:6",
  "Conversion of type '[string, string] | undefined' to type '[undefined, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 109`] = `
[
  "341:6",
  "Conversion of type '[DefaultedValueFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">, DefaultedValueFromSchema<{ readonly v1: { ...; }; readonly v1d: { ...; }; }, "v1">] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 110`] = `
[
  "342:6",
  "Conversion of type '[string, string] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 111`] = `
[
  "358:8",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1">, CellOrUndefined<...>] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 112`] = `
[
  "359:8",
  "Conversion of type '[CellOrUndefined<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1d">, CellOrUndefined<...>] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 113`] = `
[
  "365:8",
  "Conversion of type '[string, string] | undefined' to type '[string, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 114`] = `
[
  "366:8",
  "Conversion of type '[string, string] | undefined' to type '[undefined, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 115`] = `
[
  "367:8",
  "Conversion of type '[string, string] | undefined' to type '[undefined, undefined]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 116`] = `
[
  "368:8",
  "Conversion of type '[DefaultedValueFromSchema<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1">, DefaultedValueFromSchema<{ readonly v1: { ...; }; readonly v1d: { ...; }; }, "v1">] | undefined' to type '[string, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 117`] = `
[
  "369:8",
  "Conversion of type '[string, string] | undefined' to type '[number, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 118`] = `
[
  "380:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 119`] = `
[
  "381:4",
  "Conversion of type 'CellChange<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number | undefined> | undefined' to type '[true, number, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 120`] = `
[
  "382:4",
  "Conversion of type 'CellChange<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, "t1", "c1", number | undefined> | undefined' to type '[true, string, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 121`] = `
[
  "386:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 122`] = `
[
  "392:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 123`] = `
[
  "400:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 124`] = `
[
  "401:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 125`] = `
[
  "402:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 126`] = `
[
  "408:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 127`] = `
[
  "409:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 128`] = `
[
  "413:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 129`] = `
[
  "415:36",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 130`] = `
[
  "420:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 131`] = `
[
  "421:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 132`] = `
[
  "422:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 133`] = `
[
  "428:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 134`] = `
[
  "429:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 135`] = `
[
  "433:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 136`] = `
[
  "436:37",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 137`] = `
[
  "447:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 138`] = `
[
  "448:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 139`] = `
[
  "449:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 140`] = `
[
  "454:4",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d" | undefined'.",
]
`;

exports[`Types with schemas 141`] = `
[
  "461:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 142`] = `
[
  "462:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 143`] = `
[
  "463:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 144`] = `
[
  "468:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 145`] = `
[
  "472:4",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1"'.",
]
`;

exports[`Types with schemas 146`] = `
[
  "488:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 147`] = `
[
  "489:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 148`] = `
[
  "490:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 149`] = `
[
  "491:6",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 150`] = `
[
  "499:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 151`] = `
[
  "500:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 152`] = `
[
  "501:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 153`] = `
[
  "508:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 154`] = `
[
  "509:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 155`] = `
[
  "510:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 156`] = `
[
  "518:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 157`] = `
[
  "519:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 158`] = `
[
  "524:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 159`] = `
[
  "528:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 160`] = `
[
  "530:34",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 161`] = `
[
  "536:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 162`] = `
[
  "537:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 163`] = `
[
  "538:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 164`] = `
[
  "539:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 165`] = `
[
  "546:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 166`] = `
[
  "547:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 167`] = `
[
  "548:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 168`] = `
[
  "555:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 169`] = `
[
  "556:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 170`] = `
[
  "557:4",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 171`] = `
[
  "565:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 172`] = `
[
  "566:4",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 173`] = `
[
  "571:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 174`] = `
[
  "572:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 175`] = `
[
  "573:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 176`] = `
[
  "577:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 177`] = `
[
  "580:38",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 178`] = `
[
  "593:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 179`] = `
[
  "594:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 180`] = `
[
  "595:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 181`] = `
[
  "596:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 182`] = `
[
  "597:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 183`] = `
[
  "598:6",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 184`] = `
[
  "599:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 185`] = `
[
  "600:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 186`] = `
[
  "620:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 187`] = `
[
  "621:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 188`] = `
[
  "626:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 189`] = `
[
  "627:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 190`] = `
[
  "629:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 191`] = `
[
  "630:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 192`] = `
[
  "631:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 193`] = `
[
  "632:6",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 194`] = `
[
  "633:6",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 195`] = `
[
  "646:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 196`] = `
[
  "647:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 197`] = `
[
  "648:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 198`] = `
[
  "649:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 199`] = `
[
  "650:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 200`] = `
[
  "664:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 201`] = `
[
  "665:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 202`] = `
[
  "666:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 203`] = `
[
  "667:6",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 204`] = `
[
  "679:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 205`] = `
[
  "680:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 206`] = `
[
  "681:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 207`] = `
[
  "682:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 208`] = `
[
  "683:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 209`] = `
[
  "684:6",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 210`] = `
[
  "685:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 211`] = `
[
  "711:8",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 212`] = `
[
  "716:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 213`] = `
[
  "717:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 214`] = `
[
  "722:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 215`] = `
[
  "723:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 216`] = `
[
  "728:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 217`] = `
[
  "729:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 218`] = `
[
  "731:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 219`] = `
[
  "732:6",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 220`] = `
[
  "733:6",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 221`] = `
[
  "734:6",
  "This comparison appears to be unintentional because the types '"c0" | "c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 222`] = `
[
  "747:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 223`] = `
[
  "748:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 224`] = `
[
  "749:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 225`] = `
[
  "750:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c1d"' have no overlap.",
]
`;

exports[`Types with schemas 226`] = `
[
  "751:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 227`] = `
[
  "752:6",
  "This comparison appears to be unintentional because the types '"c1"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 228`] = `
[
  "771:8",
  "This comparison appears to be unintentional because the types '"c1" | "c1d"' and '"c0"' have no overlap.",
]
`;

exports[`Types with schemas 229`] = `
[
  "773:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 230`] = `
[
  "774:6",
  "This comparison appears to be unintentional because the types '"t0" | "t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 231`] = `
[
  "775:6",
  "This comparison appears to be unintentional because the types '"c0" | "c1" | "c1d"' and '"c2"' have no overlap.",
]
`;

exports[`Types with schemas 232`] = `
[
  "786:24",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 233`] = `
[
  "787:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 234`] = `
[
  "788:6",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 235`] = `
[
  "789:6",
  "This comparison appears to be unintentional because the types '"r1"' and '"r2"' have no overlap.",
]
`;

exports[`Types with schemas 236`] = `
[
  "795:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 237`] = `
[
  "796:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t0"' have no overlap.",
]
`;

exports[`Types with schemas 238`] = `
[
  "797:4",
  "This comparison appears to be unintentional because the types '"t1"' and '"t2"' have no overlap.",
]
`;

exports[`Types with schemas 239`] = `
[
  "801:22",
  "Property 't2' does not exist on type 'Tables<{ readonly t0: { readonly c0: { readonly type: "number"; }; }; readonly t1: { readonly c1: { readonly type: "number"; }; readonly c1d: { readonly type: "string"; readonly default: ""; }; }; }, false>'.",
]
`;

exports[`Types with schemas 240`] = `
[
  "804:47",
  "Argument of type '"c2"' is not assignable to parameter of type '"c1" | "c1d" | null'.",
]
`;

exports[`Types with schemas 241`] = `
[
  "805:47",
  "Argument of type '"c2"' is not assignable to parameter of type '"c0" | "c1" | "c1d" | null'.",
]
`;

exports[`Types with schemas 242`] = `
[
  "806:35",
  "Argument of type '"t2"' is not assignable to parameter of type '"t0" | "t1" | null'.",
]
`;

exports[`Types with schemas 243`] = `
[
  "811:22",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 244`] = `
[
  "812:4",
  "Conversion of type 'ValueChange<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1", number | undefined> | undefined' to type '[true, number, string]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 245`] = `
[
  "813:4",
  "Conversion of type 'ValueChange<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, "v1", number | undefined> | undefined' to type '[true, string, number]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 246`] = `
[
  "817:22",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 247`] = `
[
  "823:22",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 248`] = `
[
  "834:24",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 249`] = `
[
  "835:6",
  "This comparison appears to be unintentional because the types '"v1"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 250`] = `
[
  "836:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 251`] = `
[
  "837:6",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 252`] = `
[
  "853:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 253`] = `
[
  "854:8",
  "Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 254`] = `
[
  "859:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 255`] = `
[
  "860:8",
  "Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.",
]
`;

exports[`Types with schemas 256`] = `
[
  "862:24",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 257`] = `
[
  "863:6",
  "This comparison appears to be unintentional because the types '"v1" | "v1d"' and '"v2"' have no overlap.",
]
`;

exports[`Types with schemas 258`] = `
[
  "868:22",
  "Property 'v2' does not exist on type 'Values<{ readonly v1: { readonly type: "number"; }; readonly v1d: { readonly type: "string"; readonly default: ""; }; }, false>'.",
]
`;

exports[`Types with schemas 259`] = `
[
  "870:36",
  "Argument of type '"v2"' is not assignable to parameter of type '"v1" | "v1d" | null'.",
]
`;
